tests/fixtures/invalid/int_bitxor_none.py
# Cannot bitwise XOR Int and None
x: int = 1 ^ None
